<resources>
    <string name="app_name">ALQU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="alarm">ALARM</string>
    <string name="stopwatch">STOPWATCH</string>
    <string name="timer">TIMER</string>
    <string name="reminder">REMINDER</string>
    <string name="quotes">QUOTES</string>
    <string name="settings">SETTINGS</string>
    <string name="help_amp_faq"><![CDATA[HELP & FAQ]]></string>
    <string name="about_us">ABOUT US</string>
</resources>